# xbot_stereo_imu_sim

./: CMakeLists.txt  README.md  package.xml
launch/: keyboard_teleop.launch  stereo_imu_node.launch  xbot_empty.launch  xbot_museum.launch
launch/include/: xbot-u.launch.xml
src/: load_stereo_imu.cpp
urdf/: robot.xacro  sick_tim.urdf.xacro  xbot-u.gazebo  xbot-u.urdf.xacro
worlds/: empty.world
